--- a/_posts/2019-11-09-Git笔记.md
+++ b/_posts/2019-11-09-Git笔记.md
@@ -1,6 +1,15 @@
-## Git笔记
+---
+layout: post
+title: "Git 笔记"
+date: 2019-11-09
+description: "Git 一系列操作"
+tag: Git
+---
+
+
 
 ### Git安装
+
 sudo apt-get install git
 
 #### 设置名字和邮箱地址
