--- a/_posts/2019-11-08-VIM笔记.md
+++ b/_posts/2019-11-08-VIM笔记.md
@@ -1,4 +1,11 @@
-### VIM笔记
+---
+layout: post
+title: "VIM 常用命令"
+date: 2019-11-09
+description: "VIM"
+tag: VIM
+---
+
 #### 安装
 教程 https://www.linuxidc.com/Linux/2019-04/157868.htm
 命令：
