--- a/_posts/2019-11-11-Git操作笔记.md
+++ b/_posts/2019-11-11-Git操作笔记.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title: "Git 操作"
-date: 2019-11-09
+title: "Git 笔记"
+date: 2019-11-11
 description: "Git 一系列操作"
 tag: Git
 ---
@@ -74,7 +74,7 @@ git config --global user.email "635976605@qq.com"
 
 
 
-#### 工作区和暂存区
+####　工作区和暂存区
 
 - 工作区有一个隐藏目录.git，这个不算工作区，而是Git的版本库。版本库里存了很多东西，其中最重要的就是称为stage的暂存区，还有Git为我们自动创建的第一个分之master，以及只想master的一个指针叫HEAD。
 
@@ -340,6 +340,71 @@ git switch master 直接切换到已有的master分支
 
 
 #### Rebase
+
+rebase操作可以把本地未push的分叉提交历史整理成直线
+
+
+
+#### 标签管理
+
+发布一个版本时，通常先在版本库中打一个标签（tag），就确定了打标签时刻的版本，将来取某个标签的版本，就把那个答辩前的时刻的历史版本取出来。标签也是版本苦的一个快照
+
+Git的标签其实它就是指向某一个commit的指针，创建和删除标签都是瞬间完成的。
+
+
+
+#### 创建标签
+
+1. git checkout (分支名)  首先切换到需要打标签的分支上
+2. git tag v1.0  打标签，默认标签是打在最新提交的commit上的
+3. git tag  查看所有标签
+4. git log --pretty=oneline --abbrev-commit  要给之前提交的打标签，先查看一下之前提交的版本号
+5. git tag v1.1 (版本号)  这次是给提交对应的版本号打标签
+6. git show v1.0 查看标签，标签不是按时间顺序列出，而是按字母排序的
+7. git tag -a v1.2 -m "说明" (版本号)  还可以创建带有说明的标签，用-a制定标签名，-m制定说明文字
+
+小结：
+
+- 命令git tag (标签名) 新建一个标签，默认为HEAD，也可以制定一个commit id
+- 命令git tag -a (标签名) -m "说明" 可以指定标签信息
+- 命令git tag 可以查看所有标签
+
+
+
+#### 操作标签
+
+1. git tag -d (标签名)  删除标签
+
+2. git push origin (标签名) 推送到远程
+
+3. git push origin --tags  一次行推送全部本地标签到远程
+
+   如果标签已经推送到远程，想删除标签
+
+4. git tag -d (标签名)  先删除本地标签
+
+5. git push origin :refs/tags/(标签名)  再从远程删除，也是push
+
+小结：
+
+- 命令 git push origin (标签名) 可以推送一个本地标签
+- 命令 git push origin --tags 可以推送全部未推送过的本地标签
+- 命令 git tag -d (标签名) 可以删除一个本地标签
+- 命令 git push origin :refs/tags/(标签名) 可以删除一个远程标签，前提是先删除本地标签
+
+
+
+#### 使用GitHub
+
+克隆： git clone git@github.com:GitHub用户名/库名.git、
+
+
+
+#### 使用码云
+
+[码云教程](https://www.liaoxuefeng.com/wiki/896043488029600/1163625339727712)
+
+
 
 
 
