--- a/_posts/2019-11-08-VIM常用命令.md
+++ b/_posts/2019-11-08-VIM常用命令.md
@@ -11,7 +11,7 @@ tag: VIM
 
 命令：
 
-wget -qO - https://typora.io/linux/public-key.asc | sudo apt-key add -
+wget -qO - https://typora.io/linux/public-key.asc \| sudo apt-key add -
 
 sudo add-apt-repository 'deb https://typora.io/linux ./'
 
