--- a/_posts/2019-11-08-VIM常用命令.md
+++ b/_posts/2019-11-08-VIM常用命令.md
@@ -6,7 +6,7 @@ description: "VIM"
 tag: VIM
 ---
 
-#### 安装
+### 安装
 教程 https://www.linuxidc.com/Linux/2019-04/157868.htm
 
 命令：
@@ -23,7 +23,7 @@ sudo apt-get install typora
 
 vimtutor进入vim教程
 
-#### vim的三种模式
+### vim的三种模式
 
 命令模式
 
@@ -33,7 +33,7 @@ vimtutor进入vim教程
 
 
 
-#### 基本命令
+### 基本命令
 
 命令|执行结果
 ------|------
