--- a/_posts/2019-11-09-Markdown 基本命令.md
+++ b/_posts/2019-11-09-Markdown 基本命令.md
@@ -4,6 +4,8 @@
 
 \[TOC]
 
+
+
 样式：
 
 [TOC]
@@ -51,6 +53,8 @@ Markdown支持6中级别的标题，对应html标签h1～h6
 无序列表使用*或+或-字符加空格
 有序列表使用 数字加.  加空格
 
+
+
 样式：
 - 无序列表
 
@@ -73,6 +77,8 @@ Markdown支持6中级别的标题，对应html标签h1～h6
 
 \---
 
+
+
 样式：
 ***
 ---
@@ -86,6 +92,8 @@ Markdown支持6中级别的标题，对应html标签h1～h6
 \**  粗体
 \***  加粗斜体
 \~~   删除线
+
+
 
 样式：
 
@@ -103,7 +111,10 @@ Markdown支持6中级别的标题，对应html标签h1～h6
 \`  一个反引号是单行
 \```  三个反引号是多行
 
+
+
 样式：
+
 `<img src="">`
 
 ```
@@ -116,11 +127,11 @@ function a () {
 
 ### 表格
 
-表头|条目一|条目二
+表头\|条目一\|条目二
 
 :--|:--:|--:
 
-项目|项目一|项目二
+项目\|项目一\|项目二
 
 
 
@@ -131,6 +142,8 @@ function a () {
 --:  在短杠右边，内容向右对齐
 
 :--:  两边都有，内容居中
+
+
 
 样式：
 
@@ -145,17 +158,30 @@ function a () {
 如果需要使用特殊符号在内容中显示，用反斜杠\\插入到需要转义的特殊字符前边
 
 \\  反斜线
+
 \` 反引号
+
 \*  星号
+
 \_  底线
+
 \{}  花括号
+
 \[]  方括号
+
 \()  小括号
+
 \#  井号
+
 \+  加号
+
 \-  减号
+
 \.  英文句点
+
 \!  惊叹号
+
+
 
 
 
