--- a/_posts/2019-11-09-Markdown 基本命令.md
+++ b/_posts/2019-11-09-Markdown 基本命令.md
@@ -14,7 +14,7 @@
 
 ### 标题
 
-Markdown支持6中级别的标题，对应html标签h1～h6
+Markdown支持6种级别的标题，对应html标签h1～h6
 
 命令|执行结果
 --|--
@@ -44,7 +44,9 @@ Markdown支持6中级别的标题，对应html标签h1～h6
 \![图片标题]\(图片路径)
 
 样式：
+
 [百度](http://www.baidu.com)
+
 ![图片](http://img3.duitang.com/uploads/item/201605/07/20160507191419_J2m8R.thumb.700_0.jpeg)
 
 
