--- a/_posts/2019-11-09-Markdown 基本命令.md
+++ b/_posts/2019-11-09-Markdown 基本命令.md
@@ -1,3 +1,11 @@
+---
+layout: post
+title: "Markdown 基本命令"
+date: 2019-11-09
+description: "Markdown 基本命令"
+tag: Markdown
+---
+
 ## Markdown 基本命令
 
 ### 自动生成目录
